--- a/images/prepare_data/Dockerfile
+++ b/images/prepare_data/Dockerfile
@@ -1,13 +1,14 @@
 FROM python:3.11-slim
 
+COPY requirements.txt ./requirements.txt
 
 RUN apt-get update && apt-get install -y \
     build-essential \
     libpq-dev
 
-RUN pip install --upgrade pip && \
-    pip install google-cloud-biqquery pandas jupyter
-
+RUN python3.12 -m pip install --upgrade pip setuptools wheel
+RUN python3.12 -m pip install --no-cache-dir -r requirements.txt && \
+    rm -rf /var/lib/apt/lists/* && rm -fr /root/.cache
 
 
 ENV PYTHONBUFFERED=TRUE
