--- a/.cloudbuild/deploy-docker-image.yaml
+++ b/.cloudbuild/deploy-docker-image.yaml
@@ -3,7 +3,7 @@ steps:
     args: ['build', 
             '-t', '${_SERVICE_REGION}-docker.pkg.dev/${_PROJECT_ID}/${_API_NAME}/${_IMAGE_NAME}:${COMMIT_SHA}', 
             '-t', '${_SERVICE_REGION}-docker.pkg.dev/${_PROJECT_ID}/${_API_NAME}/${_IMAGE_NAME}:latest',
-            '--file', './images/${_IMAGE_NAME}/Dockerfile', './images/${_IMAGE_NAME}/'
+            '--file', './stacks/${_IMAGE_NAME}/Dockerfile', './stacks/${_IMAGE_NAME}/'
     ]
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', '${_SERVICE_REGION}-docker.pkg.dev/${_PROJECT_ID}/${_API_NAME}/${_IMAGE_NAME}', '--all-tags']
