--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -9,3 +9,10 @@ RUN python3.11 -m pip install --no-cache-dir \
         google-cloud-bigquery==3.26.0 \
         db-dtypes==1.3.0 \
         pandas==2.2.3 \
+        scikit-learn==1.5.2 \
+        PyYAML==6.0.2 \
+        python-box==6.0.2 \
+        types-PyYAML==6.0.12.12 \
+        kfp==2.9.0 \
+        ipykernel==6.29.5 \
+        notebook==7.2.2
