--- a/images/kubeflow_pipeline_runner/Dockerfile
+++ b/images/kubeflow_pipeline_runner/Dockerfile
@@ -1,11 +1,10 @@
-FROM python:3.11-slim
-
-
+FROM kubeflownotebookswg/base
 
 RUN python3.11 -m pip install --upgrade pip setuptools wheel
 
 # Gcloud recomends to install de dependencies in the same image layer
 RUN python3.11 -m pip install --no-cache-dir \
-        google-cloud-bigquery==3.26.0 \
-        db-dtypes==1.3.0 \
-        pandas==2.2.3 \
+        PyYAML==6.0.2 \
+        python-box==6.0.2 \
+        types-PyYAML==6.0.12.12 \
+        google-cloud-aiplatform==1.69.0
