--- a/images/kubeflow_pipline/requirements.txt
+++ b/images/kubeflow_pipline/requirements.txt
@@ -1,7 +1,7 @@
-PyYAML==6.0.2l
-python-box==6.0.2l
-types-PyYAML==6.0.12.12l
-google-cloud-aiplatform==1.69.0l
-ipykernel==6.29.5l
-notebook==7.2.2l
+PyYAML==6.0.2
+python-box==6.0.2
+types-PyYAML==6.0.12.12
+google-cloud-aiplatform==1.69.0
+ipykernel==6.29.5
+notebook==7.2.2
 kfp==2.9.0
