--- a/stacks/prepare_data/config.yaml
+++ b/stacks/prepare_data/config.yaml
@@ -14,3 +14,10 @@ parameters:
   dataset_id: titanic
   table_id: train_data
   output_table_id: train_cleaned
+
+
+packages:
+  BIGQUERY: google-cloud-bigquery==3.26.0
+  PANDAS: pandas==2.2.3
+  DB_TYPES: db-dtypes==1.3.0
+  SKLEARN: scikit-learn==1.5.2
