--- a/stacks/prepare_data/config.yaml
+++ b/stacks/prepare_data/config.yaml
@@ -21,3 +21,4 @@ packages:
   PANDAS: pandas==2.2.3
   DB_TYPES: db-dtypes==1.3.0
   SKLEARN: scikit-learn==1.5.2
+  AIPLATFORM: google-cloud-aiplatform==1.69.0
