--- a/stacks/prepare_data/config.yaml
+++ b/stacks/prepare_data/config.yaml
@@ -7,6 +7,7 @@ pipeline:
   root: gs://sample-model-kubeflow-pipeline/
   description: "Pipeline to preprocess Titanic dataset"
   package_path: titanic_pipeline.json
+  
 
 
 parameters:
@@ -14,6 +15,7 @@ parameters:
   dataset_id: titanic
   table_id: train_data
   output_table_id: train_cleaned
+  dataset_display_name: titanic
 
 
 packages:
