--- a/images/kubeflow_pipeline/requirements.txt
+++ b/images/kubeflow_pipeline/requirements.txt
@@ -5,3 +5,10 @@ google-cloud-aiplatform==1.69.0
 ipykernel==6.29.5
 notebook==7.2.2
 kfp==2.9.0
+click==8.1.7
+kfp-pipeline-spec==0.4.0
+kfp-server-api==2.3.0
+kubernetes==30.01.0
+requests-toolbelt==0.8.0
+tabulate==0.9.0
+urllib3==1.26.20
