--- a/stacks/titanic_model/config.yaml
+++ b/stacks/titanic_model/config.yaml
@@ -1,5 +1,5 @@
 project_id: pebolas-sandbox
-location: southamerica-east1
+location: us-central1
 
 
 pipeline:
@@ -16,9 +16,9 @@ parameters:
   table_id: train_data
   output_table_id: train_cleaned
   dataset_display_name: titanic
-  train_image_uri: southamerica-east1-docker.pkg.dev/pebolas-sandbox/sample-model/titanic_model/01_train:latest
+  train_image_uri: us-central1-docker.pkg.dev/pebolas-sandbox/sample-model/titanic_model/01_train:latest
   staging_bucket: gs://sample-model-kubeflow-pipeline/titanic-pipeline/staging
-  model_serving_container_image_uri: southamerica-east1-docker.pkg.dev/pebolas-sandbox/sample-model/deploy_model:latest
+  model_serving_container_image_uri: us-central1-docker.pkg.dev/pebolas-sandbox/sample-model/deploy_model:latest
   train_model_name: titanic_model
   train_job_name: titanic_train_job
 
