--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,11 +16,7 @@
     },
     "containerEnv": {
         "PYTHONPATH": "/workspaces/${localWorkspaceFolderBasename}/scr",
-        "GOOGLE_APPLICATION_CREDENTIALS": "/workspaces/${localWorkspaceFolderBasename}/gcloud_credentials.json",
-        "AIP_HEALTH_ROUTE": "/health",
-        "API_PREDICT_ROUTE": "/predict",
-        "AIP_MODEL_URI": "gs://sample-model-kubeflow-pipeline/titanic-pipeline/470842673491/titanic-pipeline-20241004183710/train-model_-4230843777868103680/model",
-        "AIP_SCALER_URI": "gs://sample-model-kubeflow-pipeline/titanic-pipeline/470842673491/titanic-pipeline-20241003144804/scale-data_6946246072335335424/scaler_artifact"
+        "GOOGLE_APPLICATION_CREDENTIALS": "/workspaces/${localWorkspaceFolderBasename}/gcloud_credentials.json"
     },
     "customizations": {
         "vscode": {
